fix line-wrapping and expanding textbox issue in snippet overlay

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -436,6 +436,7 @@ footer {
                 box-shadow: inset 0 1px 3px rgb(221, 221, 221);
                 min-height:34.5em;
                 clear: both;
+                max-width: 500px;
             }
         }
         #questions-list{
